refactor: code review fixes and improvements
- Extract findNearestHeading to utils.ts to reduce duplication
- Fix regex fragility in taskStatus.ts (proper title extraction)
- Fix CREATED timestamp to not delete on repeat insertion
- Add timeout (30s) to execCommand to prevent hanging
- Fix XSS vulnerability with escapeHtml in agendaPanel
- Fix memory leak: clear debounceTimer on dispose
- Remove duplicate rendering code (keep only JS in webview)
- Remove unused outputChannel from agenda.ts
- Replace magic numbers with PRIORITY_A_CODE/PRIORITY_Z_CODE constants
- Sync HEADING_REGEX between timestampEdit.ts and taskStatus.ts
- Improve error messages for missing workspace/extractor
- Add AgendaData union type for better type safety
- Add MIT License
- Update version to 0.1.0
- Add repository URL to package.json
- Create TODO.md with configuration, publishing, documentation, and testing tasks
- Update README.md to fix toggle priority description

--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "markdown-org",
   "displayName": "Markdown Org",
   "description": "Org-style task management for Markdown files",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VitalyOstanin/markdown-org"
+  },
+  "license": "MIT",
   "engines": {
     "vscode": "^1.85.0"
   },
@@ -84,7 +89,7 @@
       },
       {
         "command": "markdown-org.insertDeadline",
-        "key": "ctrl+k ctrl+k ctrl+d",
+        "key": "ctrl+k ctrl+k d",
         "when": "editorTextFocus && editorLangId == markdown"
       },
       {
